# Coloring_book_assistant

./: .gitignore  PINTEREST_PUBLISHER_COMPARISON.md  README.md  app.py  coloring_book_clementine_babies_a_kawaii_coloring_journey_20251203_202801.json  coloring_book_dogs_on_the_move_a_fun_road_trip_coloring_book_20251203_193751.json  config.py  graph.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app_v3.py  streamlit_app_v4.py
.streamlit/: config.toml
agents/: __init__.py  executor.py
archives/: streamlit_app_v2.py
core/: __init__.py  browser_config.py  jobs.py  notifications.py  persistence.py  pipeline_persistence.py  pipeline_runner.py  pipeline_templates.py  session_keys.py  state.py
docs/: ARCHITECTURE.md  COLORING_BOOK_PROMPTS_ANALYSIS_AND_RECOMMENDATIONS.md  COVER_GENERATION_ANALYSIS.md  COVER_PROMPTS_IMPLEMENTATION_PLAN.md  DESIGN_THEME_ANALYSIS_AND_PLAN.md  GOOGLE_DRIVE_STORAGE_DESIGN.md  IMAGE_LIGHTBOX_IMPLEMENTATION_PLAN.md  PARALLELISATION_REVIEW_AND_ALTERNATIVES.md  PINTEREST_PUBLISHER_COMPARISON.md  PINTEREST_PUBLISHING_ANALYSIS_AND_IMPROVEMENT_PLAN.md  REFACTORING_ANALYSIS_AND_RECOMMENDATIONS.md  REFACTORING_REVIEW_CLEAN_AND_TIDY.md  UI_FULL_ANALYSIS_AND_IMPROVEMENTS.md  UI_UX_REVIEW_AND_RECOMMENDATIONS.md  UI_UX_SECTION_BY_SECTION_ANALYSIS.md  UI_UX_TAB_BY_TAB_RECOMMENDATIONS.md  UPSCALE_BATCH_ANALYSIS.md  WORKFLOW_5_DESIGNS_AND_PARALLELISATION.md  notifications_feature_spec.md
features/: __init__.py
generated_images/: image_evaluations.json
integrations/: __init__.py
saved_designs/: Woodland_Wonders_A_Forest_Animal_Coloring_Experien_20260126_105500.json
state/: __init__.py  workflow_state.py
tests/: __init__.py
tools/: __init__.py  (+2 more)
(+133 files in other folders)
