[project]
name = "cb-assit-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.32",
    "langchain-core>=0.3.0",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "openai>=1.0.0",
]
